--- a/styles/index.css
+++ b/styles/index.css
@@ -20,14 +20,11 @@ body {
 
 .container {
     width: 100%;
-    max-width: 1500px;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin: 0 auto;
+    margin: 0;
     }    
 
 header {
-        padding: 1rem 0;
+    padding: 1rem 1rem;
 }    
 img{
     width:90px
@@ -39,13 +36,15 @@ nav {
     align-items: baseline;
     height: 100%;
     justify-content: space-between;
+    padding-right: 5rem;
+    padding-left: 5rem;
 }
 
 h1{font-size: 3rem;}
 h4{font-size: 2rem;}
 
 h3{margin: 5px;
-    
+
 }
 
 
@@ -58,6 +57,7 @@ h3{margin: 5px;
     display: flex;
     justify-content: space-between;
     padding-left: 1rem;
+    padding-right: 1rem;
     padding-top: 1rem;
     padding-bottom:80px;
 }
