weather updated with photo

--- a/styles/clouds.css
+++ b/styles/clouds.css
@@ -1,6 +1,6 @@
 .cloud{
     position:relative;
-    background: url("/assets/cloud.png");
+    background: url("../assets/cloud.png");
     animation:animate 60s linear infinite;
     background-size: cover;
     background-color: rgb(31, 116, 150);
@@ -10,6 +10,6 @@
         background-position: 0px;
     }
     100%{
-        background-position: 5440px;
+        background-position: -5440px;
     }
 }
